# PlainView

./: .gitignore  LICENSE  README.ko.md  README.md  index.html  package-lock.json  package.json
scripts/: build-portable.ps1
src/: App.css  App.tsx  contextMenuGeometry.ts  i18n.ts  imageCanvas.ts  types.ts  windowGeometry.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ContextMenu.tsx  ErrorView.tsx  OverlayControls.tsx
src/hooks/: useImageLoader.ts  useKeyboardShortcuts.ts  useOverlayVisibility.ts
tests/: ContextMenu.test.tsx  contextMenuGeometry.test.ts  imageCanvas.test.ts  useKeyboardShortcuts.test.tsx  windowGeometry.test.ts
