[package]
name = "plainview"
version = "0.3.0"
description = "A minimal ad-free image viewer for Windows"
authors = ["teemoZipsa"]
edition = "2021"

[lib]
name = "plainview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "webp", "bmp", "gif", "tiff", "ico"] }
jxl-oxide = { version = "0.12.5", features = ["image"] }
psd = "0.3.5"
