[package]
name = "plainview"
version = "0.7.4"
description = "A minimal ad-free image viewer for Windows"
authors = ["teemoZipsa"]
edition = "2021"

[lib]
name = "plainview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "webp", "bmp", "gif", "tiff", "ico", "tga", "pnm", "dds"] }
jxl-oxide = { version = "0.12.5", features = ["image"] }
psd = "0.3.5"
tauri-plugin-dialog = "2"
trash = "5.2.6"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_Storage_FileSystem", "Win32_System_Registry", "Win32_UI_Controls", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(windows)'.dependencies]
tauri-plugin-clipboard-manager = "2.3.2"
clipboard-win = { version = "5.4.1", features = ["std"] }
